--- a/src/UI_Design/ProductCard/styles.module.scss
+++ b/src/UI_Design/ProductCard/styles.module.scss
@@ -2,6 +2,7 @@
     position: relative;
     border-radius: 8px;
     padding: 10px;
+    margin-bottom: 15px;
     // height: auto;
     border: 1px solid rgb(221, 216, 216);
     box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
