--- a/src/UI_Design/CartItemsStyles/styles.module.scss
+++ b/src/UI_Design/CartItemsStyles/styles.module.scss
@@ -9,6 +9,7 @@ tr {
 
         &:nth-child(2) {
             padding: 20px;
+
             img {
                 width: 90%;
                 border-radius: 5px;
@@ -132,6 +133,187 @@ tr {
 
         .delete_btn:active {
             transform: translate(3px, 3px);
+        }
+    }
+
+}
+
+.close_modal {
+    width: 100%;
+    text-align: right;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid indigo;
+
+    h2 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 600;
+        padding-left: 10px;
+
+    }
+
+    button {
+        padding: 8px;
+        background-color: transparent;
+        border: none;
+
+        .close_icon {
+            color: rgba(9, 8, 8, 0.5);
+        }
+
+    }
+}
+
+.detailAdmin {
+
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+
+    @media (max-width: '900px') {
+        grid-template-columns: auto;
+        overflow-y: scroll;
+        height: 300px;
+
+    }
+
+    .images {
+        display: grid;
+        grid-template-columns: auto;
+
+        @media (max-width: '900px') {
+            grid-template-columns: 100%;
+            margin-bottom: 15px;
+        }
+
+        .firstImg {
+            width: 80%;
+            height: 300px;
+            text-align: center;
+            display: grid;
+            grid-template-columns: auto;
+            padding-top: 0;
+            img {
+                width: 100%;
+                height: 300px;
+                padding: 15px;
+                padding-top: 0;
+                border-radius: 5px;
+
+                @media (max-width: '600px') {
+                    width: 100%;
+                    height: 80%;
+                    padding: 0 10px;
+                }
+            }
+        }
+
+        .otherImages {
+            display: grid;
+            grid-template-columns: 24% 24% 24% 24%;
+            gap: 5px;
+            img {
+                width: 100%;
+                height: 80px;
+                border-radius: 5px;
+
+                @media (max-width: '600px') {
+                    height: 60px;
+                    // margin: auto;
+                }
+            }
+
+        }
+    }
+
+    .about_product {
+        padding-top: 10px;
+        h2 {
+            font-family: Arial, Helvetica, sans-serif;
+          font-size: 20px;
+
+        }
+
+        p {
+            margin: 8px 0;
+            color: #777;
+        }
+        h3{
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        .desc {
+            margin-top: 20px;
+
+            h4 {
+                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;      
+            }
+        }
+
+        .descriptions {
+            margin-top: 15px;
+            padding: 0 5px;
+            display: flex;
+            justify-content: space-between;
+
+            @media (max-width: '1050px') {
+                flex-direction: column;
+
+            }
+
+            .active_tab {
+                background-color: indigo;
+                color: #fff;
+
+            }
+
+            .tab_btn {
+                padding-bottom: 15px;
+
+                @media (max-width: '1060px') {
+
+                    margin-top: 20px;
+
+
+                }
+            }
+
+            .tab_btn button {
+                border-radius: 4px;
+                border: 1px solid indigo;
+                padding: 5px;
+                margin-right: 15px;
+                font-size: 20px;
+
+
+
+                &:hover {
+                    transform: scale(1.1);
+                    transition: all .3s;
+
+
+                }
+            }
+
+            .description_rewiews {
+                padding-right: 10px;
+
+                p {
+                    font-family: 'Roboto';
+                    text-align: justify;
+                    color: #000;
+                    line-height: 25px;
+                }
+
+                @media (max-width: '1060px') {
+                    margin-bottom: 20px;
+                    padding-right: 0;
+
+                }
+            }
+
+             
         }
     }
 }
