add modal admin

--- a/src/Admin/Pages/Add_Product/styles.module.scss
+++ b/src/Admin/Pages/Add_Product/styles.module.scss
@@ -1,6 +1,7 @@
 .add_product {
   margin-top: 65px;
   padding: 20px;
+
   form {
     width: 70%;
     margin: auto;
@@ -9,10 +10,14 @@
       width: 100%;
     }
 
-    h1 {
-      font-size: 22px;
-      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-      margin-bottom: 20px;
+    .back {
+      background: transparent;
+      border: none;
+
+      &:hover {
+        transform: translateX(-10px);
+        transition: all .3s;
+      }
     }
 
     .inputs {
@@ -32,9 +37,10 @@
       }
 
       input {
-         &:user-invalid{
-        border: 2px solid #dc1515;
+        &:user-invalid {
+          border: 2px solid #dc1515;
         }
+
         width: 90%;
         height: 40px;
         margin: auto;
@@ -49,9 +55,11 @@
         @media (max-width: '1200px') {
           width: 100%;
         }
-        &::user-invalid{
-        border: 2px #dc1515 solid;
+
+        &::user-invalid {
+          border: 2px #dc1515 solid;
         }
+
         &::placeholder {
           font-size: 13px;
           font-weight: 500;
@@ -65,117 +73,130 @@
       }
 
     }
-  .select_photo{
-     width: 80%;
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-           margin-top: 20px;
 
-    .categories {
+    .select_photo {
+      width: 80%;
       display: flex;
-      flex-direction: column;
-      align-items: start;
-      margin-right: 50px;
-      label{
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        // margin-bottom: 10px;
-      }
-      select {
-        background-color: white;
-        border: thin solid blue;
-        border-radius: 4px;
-        display: inline-block;
-        font: inherit;
-        padding: 8px 45px 8px 10px;
-        margin-right: 5px;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 20px;
 
-        @media (max-width: '450px') {
-          font-size: 14px;
-          padding: 6px 35px 6px 10px;
-          font: small;
-
-        }
-
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        -webkit-appearance: none;
-        -moz-appearance: none;
+      @media (max-width: '800px') {
+        // flex-direction: column;
+        // align-items: start;
+        width: 100%;
       }
 
-      .category_select {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      .categories {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
 
-        option {
-          font-family: 'Montserrat';
+        // margin-right: 50px;
+        //  margin-bottom: 10px;
+        label {
+          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
-        margin-right: 20px;
-        background-image: linear-gradient(45deg, transparent 50%, #fff 50%),
-        linear-gradient(135deg, #fff 50%, transparent 50%),
-        linear-gradient(to right, indigo, indigo);
-        background-position: calc(100% - 20px) calc(1em + 2px),
-        calc(100% - 15px) calc(1em + 2px),
-        100% 0;
-        background-size: 5px 5px,
-        5px 5px,
-        2.5em 2.5em;
-        background-repeat: no-repeat;
+        select {
+          background-color: white;
+          border: thin solid blue;
+          border-radius: 4px;
+          display: inline-block;
+          font: inherit;
+          padding: 8px 45px 8px 10px;
+          margin-right: 5px;
 
-        &:focus {
-          background-image:
-            linear-gradient(45deg, white 50%, transparent 50%),
-            linear-gradient(135deg, transparent 50%, white 50%),
-            linear-gradient(to right, indigo, indigo);
-          background-position:
-            calc(100% - 15px) 1em,
-            calc(100% - 20px) 1em,
-            100% 0;
-          background-size:
-            5px 5px,
-            5px 5px,
-            2.5em 2.5em;
-          background-repeat: no-repeat;
-          border-color: indigo;
-          outline: 0;
+          @media (max-width: '450px') {
+            font-size: 14px;
+            padding: 6px 35px 6px 10px;
+            font: small;
+            height: 35px;
+            // margin-bottom: 15px;
+
+
+          }
+
+          -webkit-box-sizing: border-box;
+          -moz-box-sizing: border-box;
+          box-sizing: border-box;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+        }
+
+        .category_select {
+          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
           option {
-            color: #000;
+            font-family: 'Montserrat';
+          }
+
+          margin-right: 20px;
+          background-image: linear-gradient(45deg, transparent 50%, #fff 50%),
+          linear-gradient(135deg, #fff 50%, transparent 50%),
+          linear-gradient(to right, indigo, indigo);
+          background-position: calc(100% - 20px) calc(1em + 2px),
+          calc(100% - 15px) calc(1em + 2px),
+          100% 0;
+          background-size: 5px 5px,
+          5px 5px,
+          2.5em 2.5em;
+          background-repeat: no-repeat;
+
+          &:focus {
+            background-image:
+              linear-gradient(45deg, white 50%, transparent 50%),
+              linear-gradient(135deg, transparent 50%, white 50%),
+              linear-gradient(to right, indigo, indigo);
+            background-position:
+              calc(100% - 15px) 1em,
+              calc(100% - 20px) 1em,
+              100% 0;
+            background-size:
+              5px 5px,
+              5px 5px,
+              2.5em 2.5em;
+            background-repeat: no-repeat;
+            border-color: indigo;
+            outline: 0;
+
+            option {
+              color: #000;
+            }
           }
         }
+
+
+
       }
 
+      .photoDown {
 
+        .file_input {
 
-    }
-    .photoDown{
-      // margin-top: 20px;
-      .file_input {  
-  
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+          @media (max-width: '510px') {
+            flex-direction: column;
+            align-items: start;
+          }
+
+          input {
+            border-radius: 5px;
+            padding-left: 30px;
+            width: 60%;
+            border: none;
+            color: #000;
+
             @media (max-width: '510px') {
-                flex-direction: column;
-                align-items: start;
+
+              display: none;
             }
+          }
 
-            input {
-                border-radius: 5px;
-                padding-left: 30px;
-                width: 60%;                 
-                border: none;
-                color: #000;
-
-                @media (max-width: '510px') {
-                    width: 100%;
-                    padding: 5px;
-                    margin-top: 15px;
-
-                }
-            }
-             .choose_file {
+          .choose_file {
             width: 180px;
             height: 36px;
             border-radius: 5px;
@@ -188,49 +209,115 @@
             justify-content: space-between;
             background-color: transparent;
 
-            span {
-                font-size: 17px;
+           
+             @media (max-width: '510px') {
+                                 width: 150px;
+                   height: 32px;
+              
+            }
+             @media (max-width: '355px') {
+                                 width: 110px;
+                   height: 32px;
+                               padding: 0 4px;
+
+              
+            }
+             span {
+              font-size: 14px;
+ @media (max-width: '355px') {
+                   font-size: 12px;
+              
+            }
+            }
+
+            .camera {
+                width: 25px;
+                   height: 25px;
+              
+              @media (max-width: '355px') {
+                   width: 18px;
+                   height: 18px;
+              
+            }
 
             }
 
-             
+
 
             &:hover {
+              transition: all .4s;
+              transform: scale(1.1);
+
+              .camera {
                 transition: all .4s;
-                transform: scale(1.1);
 
-                .camera {
-                    transition: all .4s;
+                transform: scale3d(1.1);
 
-                    transform: scale3d(1.1);
-
-                }
+              }
             }
-        }
+          }
 
         }
 
-       
+
+      }
     }
-  }
-    .add_product_btn{
+
+    .myProgress {
+      width: 90%;
+      background-color: #ddd;
+      margin-top: 15px;
+      border-radius: 2px;
+
+      @media (max-width: '900px') {
+        width: 100%;
+      }
+
+      .myBar {
+        font-size: 10px;
+        height: 12px;
+        background-image: linear-gradient(to right, indigo 0%, #9966ec 51%, rgb(44, 11, 68) 100%);
+        text-align: center;
+        color: white;
+        border-radius: 2px;
+
+      }
+    }
+
+    .add_product_btn {
       width: 80%;
       margin: auto;
       text-align: right;
-      button{
-      margin-top: 15px;
-      padding: 5px 15px;
-      border: none;
-      font-size: 20px;
-      border-radius: 4px;
-            background-color:indigo;
-      color: #fff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      &:hover{
-        transform: scale(1.08);
-        transition: all .3s;
+
+      @media (max-width: '610px') {
+        width: 100%;
+
       }
-    }
+
+      button {
+        margin-top: 15px;
+        padding: 5px 15px;
+        border: none;
+        font-size: 20px;
+        border-radius: 4px;
+        background-image: linear-gradient(to right, indigo 0%, #9966ec 51%, rgb(44, 11, 68) 100%);
+        color: #fff;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+        @media (max-width: '510px') {
+          width: 100%;
+
+        }
+
+        &:hover {
+          transform: scale(1.05);
+          transition: all .3s;
+        }
+        &:active{
+            transform: scale(0.8);
+
+        }
+      }
     }
 
 
