--- a/src/Pages/productDetails/styles.module.scss
+++ b/src/Pages/productDetails/styles.module.scss
@@ -4,337 +4,198 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 70px;
+    padding-top: 75px;
 
     .product_details {
-        width: 80%;
+        width: 90%;
         height: auto;
         padding-bottom: 35px;
         border-radius: 10px;
-        background-color: aliceblue;
+        // background-color: aliceblue;
 
-        box-shadow: 1px 1px 11px 0px rgba(0, 0, 0, 0.62);
-        -webkit-box-shadow: 1px 1px 11px 0px rgba(0, 0, 0, 0.62);
-        -moz-box-shadow: 1px 1px 11px 0px rgba(0, 0, 0, 0.62);
-
+      box-shadow: 1px 1px 6px -1px rgba(113,102,102,0.69);
+-webkit-box-shadow: 1px 1px 6px -1px rgba(113,102,102,0.69);
+-moz-box-shadow: 1px 1px 6px -1px rgba(113,102,102,0.69);
         .product_detail {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            // display: flex;
+            // justify-content: space-between;
+            // align-items: center;
              @media (max-width: '1060px') {
            flex-direction: column;
 
 
         }
-        }
 
-        @media (max-width: '1060px') {
-            width: 100%;
-            height: auto;
-            box-shadow: none;
-            
+        
+.detailAdmin {
 
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 50% 50%;
 
-        }
-
-        @media (max-width: '710px') {
-            
-            flex-direction: column;
-
-
-        }
-
+    @media (max-width: '900px') {
+        grid-template-columns: auto;
+        overflow-y: scroll;
+        height: 300px;
+    &::-webkit-scrollbar{
+ width: 4px;
+  height: 1px;
+    }
+ 
 
     }
 
-    .product_img {
-        border-radius: 10px;
 
-        img {
-            mix-blend-mode: multiply;
-            padding: 20px;
-            width: 400px;
-            height: 400px;
-            border-radius: 10px;
-
-            @media (max-width: '710px') {
-                width: 100%;
-                height: 100%;
-
-
-            }
-        }
-
-    }
 
     .about_product {
-        height: 100%;
-        padding-left: 50px;
+        padding-top: 50px;
+        padding-left: 15px;
+        .add_product_btn{
+display: flex;
+justify-content: space-between;
+align-items: center;
+            button{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                 background-image: linear-gradient(to right, indigo 0%, #9966ec 51%, rgb(44, 11, 68) 100%);
+            margin: 10px;
+            padding: 15px 45px;
+            text-align: center;
+            transition: 0.5s;
+            background-size: 200% auto;
+            color: white;
+            box-shadow: 0 0 20px #eee;
+            border-radius: 10px;
+            background-color: indigo;
+            color: #fff;
+            font-size: 18px;
+            border-radius: 4px;
+            border: none;
+            padding: 5px;
+            margin: 20px 0;
 
-        @media (max-width: '710px') {
-            padding-left: 10px;
+            &:hover {
+                transition: all .4s;
+                transform: scale(1.08);
+                background-position: right center;
+                /* change the direction of the change here */
+                color: #fff;
+                text-decoration: none;
 
-
-        }
-
-        h1 {
-            text-align: start;
-            font-weight: 600;
-            margin-bottom: 30px;
-            font-size: 25px;
-            font-family: 'Montserrat';
-
-            @media (max-width: '710px') {
-                text-align: center;
-                font-size: 22px;
-                font-weight: 700;
-
-
-            }
-        }
-
-        .product_rating {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding-right: 10px;
-
-            @media (max-width: '710px') {
-                flex-wrap: wrap;
-
-
-            }
-
-            span {
-                color: rgb(249, 82, 22);
-
-            }
-
-            h3 {
-                font-size: 20px;
-
-            }
-
-            h4 {
-                font-size: 25px;
-                font-weight: 600;
-                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
-                @media (max-width: '710px') {
-                    font-size: 17px;
-
-
+                .fiPlus {
+                    transition: all .4s;
+                    transform: rotate(-180deg);
                 }
             }
+
+            }
+        }
+      h4{
+        text-align: right;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: indigo;
+      }
+        h2 {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 20px;
+
         }
 
         p {
-            font-size: 20px;
-            padding: 15px 0;
+            margin: 8px 0;
+            color: #777;
+        }
+
+        h3 {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
         }
 
-        .add_btn {
+        .desc {
+            margin-top: 20px;
+
+            h4 {
+                text-align: start;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            }
+        }
+
+        .descriptions {
+            margin-top: 15px;
+            // padding: 0 5px;
             display: flex;
-            align-items: center;
-            margin: 15px 0;
-            background-color: indigo;
-            color: #fff;
-            padding: 5px 10px;
-            border: none;
-            border-radius: 3px;
-            font-size: 20px;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            @media (max-width: '1060px') {
-            font-size: 16px;
-            margin: auto;
-            width: 98%;
-            margin-bottom: 20px;
-            text-align: center;
-            justify-content: center;
+            justify-content: space-between;
 
-        }
-            &:hover {
-                transform: scale(1.1);
-                transition: all .4s;
+            @media (max-width: '1050px') {
+                flex-direction: column;
 
-                .plus_btn {
-                    transform: translateX(-10px);
-                    transition: all .4s;
+            }
+
+            .active_tab {
+            background-image: linear-gradient(to right, indigo 0%, #9966ec 51%, rgb(44, 11, 68) 100%);
+                color: #fff;
+
+            }
+
+            .tab_btn {
+                padding-bottom: 15px;
+
+                @media (max-width: '1060px') {
+
+                    margin-top: 20px;
+
+
                 }
             }
 
-            .plus_btn {
-                margin-left: 20px;
-            }
-        }
-
-    }
-
-    .descriptions {
-        padding: 0 20px;
-        display: flex;
-        justify-content: space-between;
-         @media (max-width: '1050px') {
-       flex-direction: column;
-
-                }
-
-        .active_tab {
-            background-color: indigo;
-            color: #fff;
-
-        }
-
-        .tab_btn {
-            padding-bottom: 40px;
-             @media (max-width: '1060px') {
-              
-                margin-top: 20px;
-
-
-        }
-        }
-
-        .tab_btn button {
-            border-radius: 4px;
-            border: 1px solid indigo;
-            padding: 5px;
-            margin-right: 15px;
-            font-size: 20px;
-
-
-
-            &:hover {
-                transform: scale(1.1);
-                transition: all .3s;
-
-
-            }
-        }
-
-        .description_rewiews {
-            padding-right: 40px;
-            p {
-                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-              text-align: justify;
-              line-height: 25px;
-            }
-             @media (max-width: '1060px') {
-            margin-bottom: 20px;
-            padding-right: 0;
-
-        }
-        }
-
-        .send_message {
-
-            form {
-                width: 500px;
-                height: auto;
-                padding:15px;
-                margin: 10px;
-                border-radius: 10px;
+            .tab_btn button {
+                border-radius: 4px;
                 border: 1px solid indigo;
-                // background: transparent;
-                backdrop-filter: blur(7px);
+                padding: 5px;
+                margin-right: 15px;
+                font-size: 20px;
 
-                @media (max-width: '1040px') {
-                    width: 100%;
-                    margin: 5px;
-                }
 
-                
-                a {
-                    color: rgb(223, 196, 242);
+
+                &:hover {
+                    transform: scale(1.1);
+                    transition: all .3s;
+
+
                 }
+            }
+
+            .description_rewiews {
+                padding-right: 10px;
 
                 p {
-                    text-align: center;
-                    color: #fff;
-                    font-size: 20px;
+                    font-family: 'Roboto';
+                    text-align: justify;
+                    color: #000;
+                    line-height: 25px;
                 }
 
-                .send_msg {
-                    margin: 15px 0;
-                    display: flex;
-                    flex-direction: column;
-
-                    label {
-                        margin-bottom: 10px;
-                        border-radius: 5px;
-                        color: indigo;
-                        font-weight: 700;
-                        font-family: 'Montserrat', sans-serif;
-                        font-family: 'Open Sans', sans-serif;
-                    }
-
-                    input,textarea {
-                        width: 100%;
-                        border: 1px solid indigo;
-                        color: indigo;
-                        padding: 10px;
-                        font-size: 20px;
-                        background-color: transparent;
-                        backdrop-filter: blur(0);
-                        outline: none;
-                        border-radius: 5px;
-
-
-                    }
-
-                    ::placeholder {
-                        color: #6d6969;
-                        font-size: 14px;
-                    }
-                }
-                .rate{
-                    margin-bottom: 10px;
-                        border-radius: 5px;
-                        color: indigo;
-                        font-weight: 700;
-                        font-family: 'Montserrat', sans-serif;
-                        font-family: 'Open Sans', sans-serif;
+                @media (max-width: '1060px') {
+                    margin-bottom: 20px;
+                    padding-right: 0;
 
                 }
-                .stars{
-                    margin: 20px 0;
-                    display: flex;
-                    align-items: center;
-                     .star_desc{
-                        margin-left: 20px;
-                     }
-
-                }
-
-                .login_btn {
-                    width: 100%;
-                    display: inline-block;
-                    outline: none;
-                    padding: 5px;
-                    border:none;
-                    border-radius: 4px;
-                    font-size: 20px;
-                    background-color: indigo;
-                    color: #fff; 
-                    &:hover{
-                        transition: all .4s;
-                        transform: scale(1.07);
-                    }                    
-
-                }
-
-
-                
-
             }
+
+
         }
     }
 
+    img {
+        mix-blend-mode: multiply;
+
+    }
 }
+}}}
+
 .category_name{
+    margin: 25px 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
-    padding: 20px 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+        
