--- a/src/Admin/Pages/All_Products/styles.module.scss
+++ b/src/Admin/Pages/All_Products/styles.module.scss
@@ -8,7 +8,10 @@
         width: 80%;
         margin: auto;
         text-align: end;
+ @media (max-width: '1170px') {
+        width: 100%;
 
+    }
         button {
 
             background-image: linear-gradient(to right, indigo 0%, #9966ec 51%, rgb(44, 11, 68) 100%);
@@ -179,7 +182,12 @@
 
         }
 
-
+p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
         table {
             border: 1px solid #ccc;
             border-collapse: collapse;
@@ -190,7 +198,7 @@
 
              
             tr {
-                background-color: #f8f8f8;
+                background-color: #fff;
                 border: 1px solid #ddd;
                 padding: .35em;
             }
